# replay

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.toml  slack-app-manifest.yaml  tauri.conf.json
.github/workflows/: create-release.yml  release.yml  test.yml
capabilities/: default.json
crates/recap-app/: Cargo.toml  tauri.conf.json
crates/recap-app/capabilities/: default.json
crates/recap-app/src/: commands.rs  lib.rs  main.rs  notifications.rs
crates/recap-app/tests/: test_ml_helpers.rs
crates/recap-core/: Cargo.toml
crates/recap-core/src/: auth.rs  config.rs  lib.rs  llm.rs  time.rs
crates/recap-core/src/db/: mod.rs  queries.rs
crates/recap-core/src/digest/: daily.rs
crates/recap-core/src/integrations/: github.rs  linear.rs  mod.rs  notion.rs
crates/recap-core/tests/: test_config.rs  test_digest.rs  test_models.rs
crates/recap-daemon/: Cargo.toml
crates/recap-daemon/src/: main.rs
crates/recap-daemon/src/mcp/: mod.rs  resources.rs  tools.rs
crates/recap-daemon/src/service/: launchd.rs  mod.rs
icons/: icon.icns
src/: auth.rs  commands.rs  config.rs  lib.rs  llm.rs  main.rs  notifications.rs  tray.rs
src/db/: cache.rs  migrations.rs  mod.rs  queries.rs
src/integrations/: github.rs  linear.rs  notion.rs  slack.rs
src/models/: activity.rs
src/sync/: scheduler.rs
tests/: test_config.rs  test_digest.rs  test_ml_helpers.rs  test_models.rs
tests/ui/: package-lock.json  package.json  playwright.config.js  tauri-mock.js
tests/ui/specs/: auth-banner.spec.js  debug-drawer.spec.js  github-card-order.spec.js  github-view.spec.js  helpers.js  interactions.spec.js  navigation.spec.js  overview.spec.js  settings.spec.js
ui/: app.js  index.html  style.css
