[package]
name = "recap"
version = "0.1.0"
edition = "2021"
description = "Personal activity digest from Linear, GitHub, Slack, and Notion"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = { version = "1", features = ["serde"] }
keyring = { version = "3", features = ["apple-native"] }
glob-match = "0.2"
dirs = "5"
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
