[workspace]
resolver = "2"
members = [
    "crates/recap-core",
    "crates/recap-app",
    "crates/recap-daemon",
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
glob-match = "0.2"
dirs = "5"
async-trait = "0.1"
urlencoding = "2"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-build = { version = "2", features = [] }
recap-core = { path = "crates/recap-core" }
