[package]
name = "recap-app"
version.workspace = true
edition.workspace = true
description = "Recap — Tauri GUI application"

[dependencies]
recap-core = { workspace = true }
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-updater = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
