[package]
name = "recap-daemon"
version.workspace = true
edition.workspace = true
description = "Recap — headless background sync daemon with launchd integration"

[dependencies]
recap-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
dirs = { workspace = true }
