[package]
name = "recap-daemon"
version.workspace = true
edition.workspace = true
description = "Recap — headless daemon / MCP server"

[dependencies]
recap-core = { workspace = true }
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
